# Chat-rag-agent

./: .gitignore  README.md
backend/: .env.example  _check.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  chat.py  docs.py  facebook.py  feedback.py  health.py  routes.py  sessions.py  settings.py  stats.py
backend/app/channels/: facebook.py
backend/app/core/: config.py  exceptions.py  middleware.py
backend/app/db/: __init__.py  embeddings.py  session.py  vector_store.py
backend/app/models/: schemas.py  session.py  user.py
backend/app/services/: document_ingest.py  facebook_config.py  feedback.py  rag.py  seed.py  spelling_correction.py  user_manager.py
backend/app/services/dictionary/: dic_2_gram_test.txt  dic_3_gram_test.txt  frequency_vi_test.txt
backend/app/services/eval/: __init__.py  judge.py  metrics.py  models.py
backend/app/utils/: logger.py
backend/data/: .jwt_secret  app.db
backend/data/checkpoints/: graph.db  graph.db-shm  graph.db-wal
backend/scripts/: eval_rag.py  generate_test_set.py
frontend/: auto-imports.d.ts  components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts  route-map.d.ts
frontend/src/api/: index.ts
frontend/src/components/: AppLogo.vue  ChatComposer.vue  ChatEmpty.vue  ChatSidebar.vue  UserMenu.vue
frontend/src/layouts/: default.vue
frontend/src/pages/: [...all].vue  chat.vue  documents.vue  index.vue  settings.vue
frontend/src/stores/: auth.ts  chat.ts  documents.ts  feedback.ts  (+1 more)
(+14 files in other folders)
