[project]
name = "backend"
version = "0.1.0"
description = "RAG Chatbot Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.1.2",
    "langchain-huggingface>=0.1.0",
    "langchain-openai>=0.3.0",
    "langchain-ollama>=0.3.0",
    "sentence-transformers>=3.0.0",
    "pypdf>=4.0.0",
    "chromadb>=0.5.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.23.0",
    "fastapi-users[sqlalchemy]>=13.0.0",
    "aiosqlite>=0.20.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
